# master-ipr

./: .gitignore  CMakeLists.txt  PITCHME.md  README.md
doc/: 2018-ptmr-install.md  master-ipr-install.md
examples/algorithms/cpp/class/: main.cpp
examples/cpp/: CMakeLists.txt  depthClient.cpp  robotClient.cpp
examples/matlab/: depthClient.m  robotClient.m
examples/python/: depthClient.py  robotClient.py
examples/python/algorithms/class/: main.py
map1/: README.md
map1/gazebo/: map1_world.launch
map1/occupancy/: README.md
map1/openrave/: CMakeLists.txt  iprSim1  map1.env.xml  map1.kinbody.xml
map1/openrave/ecro/: kinect.robot.xml  map1.env.xml
map10/openrave/: CMakeLists.txt  iprSim10
map11/: README.md
map11/gazebo/: map11_world.launch
map11/openrave/: CMakeLists.txt  iprSim11  map11.env.xml
map2/: README.md
map2/gazebo/: map2.gazebo2.world  map2.gazebo7.world  map2_world.launch  turtlebot_rm_map2.world  turtlebot_rm_map2_world.launch
map2/gazebo/src/: map2.m
map2/occupancy/: README.md
map2/openrave/: CMakeLists.txt  ptmrSim2
map3/: README.md
map3/gazebo/: install.sh  map3.gazebo2.world  map3.gazebo7.world  map3_world.launch  turtlebot_rm_map3.world  turtlebot_rm_map3_world.launch
map3/gazebo/src/: map3.m
map3/openrave/: CMakeLists.txt  map3.env.xml  ptmrSim3
map4/: README.md
map4/gazebo/: map4_world.launch
map4/openrave/: CMakeLists.txt  map4.env.xml  ptmrSim4
map5/: README.md
map5/gazebo/: map5_world.launch
map5/openrave/: CMakeLists.txt  iprSim5  map5.env.xml
map6/: README.md
map6/openrave/: CMakeLists.txt  ptmrSim6
map7/: README.md
map7/gazebo/: map7_world.launch
map7/openrave/: CMakeLists.txt  map7.env.xml  ptmrSim7
map8/openrave/: CMakeLists.txt  ptmrSim8
map9/openrave/: CMakeLists.txt  ptmrSim9
new_maps/: map12.csv  map13.csv
occupancy-maps/: README.md
openrave/: CMakeLists.txt
openrave/ecro/: mapping_room.env.xml  mapping_room_bigger.env.xml
scripts/: CMakeLists.txt
scripts/python/: ptmrSim  ptrmSim
src/bash/: README.md
src/cpp/: CMakeLists.txt
src/cpp/algorithms/bfs/: CMakeLists.txt  main.cpp
src/cpp/algorithms/class/: README.md  main.cpp
src/matlab/algorithms/class/: Node.m  main.m
src/python/algorithms/: main_bfs.py  pathfinding.py
src/python/algorithms/bfs/: main.py
src/python/algorithms/class/: main.py
